--- a/static/challenges.css
+++ b/static/challenges.css
@@ -19,13 +19,26 @@
 
 .challenge-button {
     padding: 10px;
-    border: none;
     border-radius: 12px;
-    border: 1px solid black;
+    border: 1px solid rgb(129, 129, 129);
+    font-family: 'Source Serif 4', serif;
 }
 
 .challenge-button:hover {
     background-color: rgb(241, 225, 241);
+}
+
+.add-challenge-button {
+    background-color: #f8f8f8;
+    cursor: pointer;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    height: fit-content;
+    padding: 20px;
+    margin: 20px;
+    font-size: 17px;
+    font-family: 'Source Serif 4', serif;
 }
 
 .description-input {
@@ -55,23 +68,23 @@
 }
 
 .pink {
-    background-color: #fde2ec;
+    background-color: #fae7ee;
 }
 
 .yellow {
-    background-color: #f8f5c7;
+    background-color: #fcfade;
 }
 
 .green {
-    background-color: #d2f5d3;
+    background-color: #e6f8e6;
 }
 
 .blue {
-    background-color: #d3eefc;
+    background-color: #e6f2f8;
 }
 
 .purple {
-    background-color: #dfd5f1;
+    background-color: #e8e3f3;
 }
 
 .goal {
@@ -91,4 +104,14 @@ input[type="radio"] {
 
 input[type="radio"]:checked + .color {
     border: 2px solid rgb(155, 129, 91);
+}
+
+.challenges-and-button {
+    display: flex;
+    padding: 50px;
+    margin-left: 200px;
+}
+
+.hidden {
+    display: none;
 }
