--- a/static/login.css
+++ b/static/login.css
@@ -3,6 +3,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #e9ecf1;
+    font-family: 'Source Serif 4', serif;
 }
 .container {
     display: flex;
@@ -10,6 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
+    background-color: #f8f8f8;
     transform: translate(-50%, -50%);
     text-align: center;
     padding: 40px;
@@ -35,6 +38,7 @@ body {
     border: none;
     border-radius: 4px;
     transition: background-color 0.3s;
+    font-family: 'Source Serif 4', serif;
 }
 
 .button:hover {
