--- a/static/main.css
+++ b/static/main.css
@@ -2,9 +2,10 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: #eae9f1;
+    background-color: #e9ecf1;
     min-height: 100vh;
     flex-direction: column;
+    font-family: 'Source Serif 4', serif;
 }
 
 .container {
@@ -13,7 +14,7 @@ body {
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     text-align: center;
-    width: 40%;
+    min-width: 400px;
     max-width: 800px;
     margin: 20px;
 }
@@ -25,6 +26,7 @@ body {
     border-radius: 12px;
     border: 1px solid #ccc;
     background-color: rgb(228, 236, 204);
+    font-family: 'Source Serif 4', serif;
 }
 
 .button:hover {
@@ -41,20 +43,17 @@ body {
 }
 
 ul {
-    list-style-type: none;
-    text-align: left;
-    padding: 0;
-    margin-top: 25px;
-    margin-bottom: 25px;
-
+    background-color: white;
+    border-radius: 12px;
+    padding: 5px;
 }
 
 li {
     list-style-type: none;
-    width: 100%;
-    padding: 10px;
+    padding: 5px;
     border-bottom: 1px solid #ccc;
     text-align: center;
+    margin: 20px;
 }
 
 .sidebar {
@@ -62,15 +61,15 @@ li {
     left: 0;
     top: 0;
     height: 100%;
-    width: 200px;
-    background-color: #edf2f4;
+    width: 20%;
     text-align: center;
 }
+
 .sidebar a {
     display: block;
     font-size: larger;
     text-decoration: none;
-    margin-bottom: 20px
+    padding: 20px;
 }
 
 .sidebar a:first-child {
@@ -82,21 +81,8 @@ a {
     margin-right: 10px;
 }
 
-a:hover,
-.sidebar-button:hover {
+a:hover, .add-challenge-button:hover {
     color: rgb(250, 182, 193);
-}
-
-.sidebar-button {
-    display: inline-block;
-    text-decoration: none;
-    font-size: larger;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    font-family: inherit;
 }
 
 .bad-input {
@@ -105,4 +91,30 @@ a:hover,
 
 .errorNotification {
     color: red;
+}
+
+.true {
+    background-color: #f8f8f8;
+}
+
+.links {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.scrollable-challenges {
+    overflow-y: auto;
+    max-height: 800px;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #e9ecf1;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #dbe0e7;
 }
