--- a/templates/day.html
+++ b/templates/day.html
@@ -72,26 +72,28 @@
                 <p id="errorNotification" class="errorNotification"></p>
                 {% for habit in habits %}
                 <li>
-                    {{ habit.habit_name }}
-                    <input type="hidden" name="track_value_{{ habit.id }}" value="{{ habit.track_number_value }}">
-                    <input type="hidden" name="habit_id_{{ habit.id }}" value="{{ habit.id }}">
-                    {% if habit.track_number_value %}
-                        {% if habit.habit_name == 'mood' %}
-                            <select id="mood" class="input" name="number_{{ habit.id }}">
-                                <option value="5">5 - Excellent</option>
-                                <option value="4">4 - Good</option>
-                                <option value="3">3 - Okay</option>
-                                <option value="2">2 - Bad</option>
-                                <option value="1">1 - Awful</option>
-                            </select>
-                        {% elif habit.habit_name == 'sleep' %}
-                            <input type="number" id="sleepValue" class="input" name="number_{{ habit.id }}" placeholder="h">
+                    <div class="habit">
+                        {{ habit.habit_name }}
+                        <input type="hidden" name="track_value_{{ habit.id }}" value="{{ habit.track_number_value }}">
+                        <input type="hidden" name="habit_id_{{ habit.id }}" value="{{ habit.id }}">
+                        {% if habit.track_number_value %}
+                            {% if habit.habit_name == 'mood' %}
+                                <select id="mood" class="input" name="number_{{ habit.id }}">
+                                    <option value="5">5 - Excellent</option>
+                                    <option value="4">4 - Good</option>
+                                    <option value="3">3 - Okay</option>
+                                    <option value="2">2 - Bad</option>
+                                    <option value="1">1 - Awful</option>
+                                </select>
+                            {% elif habit.habit_name == 'sleep' %}
+                                <input type="number" id="sleepValue" class="input" name="number_{{ habit.id }}" placeholder="h">
+                            {% else %}
+                                <input type="number" id="numberValue" class="input" name="number_{{ habit.id }}">                     
+                            {% endif %}
                         {% else %}
-                            <input type="number" id="numberValue" class="input" name="number_{{ habit.id }}">                     
+                            <input type="checkbox" class="input" name="checkbox_{{ habit.id }}" value="true">
                         {% endif %}
-                    {% else %}
-                        <input type="checkbox" class="input" name="checkbox_{{ habit.id }}" value="true">
-                    {% endif %}
+                    </div>
                 </li>
                 {% endfor %}
                 <input type="hidden" name="day" value="{{ days }}">
@@ -100,12 +102,11 @@
                 <input type="submit" id="submitButton" class="button" value="Done">
             </form>
         {% endif %}
+        <br>
+        <br>
+        <a href="/custom_habit">Add custom habit</a><br>
+        <a href="/delete_habits">Edit habits you want to track</a>
         {% endblock %}
-        {% if request.path == '/day' %}
-        </br>
-        <a href="/habits">Change habits you want to track</a></br>
-        <a href="/custom_habit">Add custom habit</a>
-        {% endif %}
     </div>
     {% if challenges %}
         <div class="container">
