--- a/templates/habits.html
+++ b/templates/habits.html
@@ -11,18 +11,15 @@
     <body>
         <div class="container">
         <h2>Choose the habits you want to track!</h2>
-        <form action="/habits" method="post">
+        <p>You can add custom habits later on!</p>
+        <form action="/habits" method="POST">
             {% for habit in ['sleep', 'workout', 'steps', 'study', 'journal', 'meditate', 'mood'] %}
             <p>{{ habit.capitalize() }}<br>
-            <input type="checkbox" class="input" name="{{ habit }}" value="true"
-            {% if habit in habits %} checked {% endif %}>
+            <input type="checkbox" class="input" name="{{ habit }}">
             {% endfor %}
             <p>
             <input type="submit" class="button" value="Done">
         </form>
-        {% if habits %}
-        <a href="/day">Return</a>
-        {% endif %}
         </div>
     </body>
 </html>
