Fix issue with /habits route not adding habits

--- a/templates/custom_habit.html
+++ b/templates/custom_habit.html
@@ -15,7 +15,7 @@
     <br>
     <p class="custom-habit-text">Do you want to track this habit with a numerical value<br>or simply mark it as done/undone?</p>
     Numerical value
-    <input type="radio" class="input" name="tracking_type" value="number">
+    <input type="radio" class="input" name="tracking_type" value="number" checked>
     <br>
     Done/Undone
     <input type="radio" class="input" name="tracking_type" value="checkbox">
