--- a/templates/day.html
+++ b/templates/day.html
@@ -104,7 +104,7 @@
         {% endif %}
         <br>
         <br>
-        <a href="/custom_habit">Add custom habit</a><br>
+        <a href="/custom_habit">Add new habit</a><br>
         <a href="/delete_habits">Edit habits you want to track</a>
         {% endblock %}
     </div>
