--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Home{% endblock %}</title>
+        <title>{% block title %}Login{% endblock %}</title>
         <link rel="stylesheet" href="/static/login.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
