--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Challenges</title>
-    <link rel="stylesheet" href="/static/main.css">
+{% extends "day.html" %}
+{% block title %}Challenges{% endblock %}
+{% block content %}
     <link rel="stylesheet" href="/static/challenges.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,300&display=swap" rel="stylesheet">
-</head>
-<body>
-    <nav class="sidebar">
-        <a href="/">Home</a>
-        <a href="/challenges" {% if request.path == '/challenges' %}class="true"{% endif %}>Challenges</a>
-        <a href="/month?date={{ date }}">Monthly View</a>
-        <a href="/logout">Log out</a>
-    </nav>
     <div id="listOfChallenges" class="challenges-and-button">
         <div class="container">
             {% if error %}
@@ -186,5 +172,4 @@
             }
         })
     </script>
-</body>
-</html>
+{% endblock %}
