--- a/templates/custom_habit.html
+++ b/templates/custom_habit.html
@@ -1,29 +1,30 @@
 {% extends "day.html" %}
 {% block content %}
-
-<h2>Custom Habit</h2>
-<br>
-{% if error %}
-    <div class="errorNotification">
-        <p>{{ error }}</p>
-    </div>
-{% endif %}
-<form action="/custom_habit" method="POST">
-    <p class="custom-habit-text">What habit do you want to track?</p>
-    <input type="text" class="input" name="custom_habit" placeholder="Habit name">
+<div class="container">
+    <h2>Custom Habit</h2>
     <br>
+    {% if error %}
+        <div class="errorNotification">
+            <p>{{ error }}</p>
+        </div>
+    {% endif %}
+    <form action="/custom_habit" method="POST">
+        <p class="custom-habit-text">What habit do you want to track?</p>
+        <input type="text" class="input" name="custom_habit" placeholder="Habit name">
+        <br>
+        <br>
+        <p class="custom-habit-text">Do you want to track this habit with a numerical value<br>or simply mark it as done/undone?</p>
+        Numerical value
+        <input type="radio" class="input" name="tracking_type" value="number" checked>
+        <br>
+        Done/Undone
+        <input type="radio" class="input" name="tracking_type" value="checkbox">
+        <br>
+        <br>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token}}">
+        <input type="submit" class="button" value="Add Habit">
+    </form>
     <br>
-    <p class="custom-habit-text">Do you want to track this habit with a numerical value<br>or simply mark it as done/undone?</p>
-    Numerical value
-    <input type="radio" class="input" name="tracking_type" value="number" checked>
-    <br>
-    Done/Undone
-    <input type="radio" class="input" name="tracking_type" value="checkbox">
-    <br>
-    <br>
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token}}">
-    <input type="submit" class="button" value="Add Habit">
-</form>
-<br>
-<a href="/day">Return</a>
+    <a href="/day">Return</a>
+</div>
 {% endblock %}
