--- a/templates/edit_habits.html
+++ b/templates/edit_habits.html
@@ -1,38 +1,39 @@
 {% extends "day.html" %}
 {% block content %}
-
-<h2>{{ date }}</h2>
-<form action="/habit_status" method="POST">
-    <ul>
-    {% for habit in habits %}
-    <li>
-        {{ habit.habit_name }}
-        <input type="hidden" name="track_value_{{ habit.id }}" value="{{ habit.track_number_value }}">
-        <input type="hidden" name="habit_id_{{ habit.id }}" value="{{ habit.id }}">
-        {% if habit.track_number_value %}
-        {% if habit.habit_name == 'mood' %}
-            <select id="mood" class="input" name="number_{{ habit.id }}">
-                <option value="5" {% if habit.number_value == 5 %} selected {% endif %}>5 - Excellent</option>
-                <option value="4" {% if habit.number_value == 4 %} selected {% endif %}>4 - Good</option>
-                <option value="3" {% if habit.number_value == 3 %} selected {% endif %}>3 - Okay</option>
-                <option value="2" {% if habit.number_value == 2 %} selected {% endif %}>2 - Bad</option>
-                <option value="1" {% if habit.number_value == 1 %} selected {% endif %}>1 - Awful</option>
-            </select>
+<div class="container">
+    <h2>{{ date }}</h2>
+    <form action="/habit_status" method="POST">
+        <ul>
+        {% for habit in habits %}
+        <li>
+            {{ habit.habit_name }}
+            <input type="hidden" name="track_value_{{ habit.id }}" value="{{ habit.track_number_value }}">
+            <input type="hidden" name="habit_id_{{ habit.id }}" value="{{ habit.id }}">
+            {% if habit.track_number_value %}
+            {% if habit.habit_name == "mood" %}
+                <select id="mood" class="input" name="number_{{ habit.id }}">
+                    <option value="5" {% if habit.number_value == 5 %} selected {% endif %}>5 - Excellent</option>
+                    <option value="4" {% if habit.number_value == 4 %} selected {% endif %}>4 - Good</option>
+                    <option value="3" {% if habit.number_value == 3 %} selected {% endif %}>3 - Okay</option>
+                    <option value="2" {% if habit.number_value == 2 %} selected {% endif %}>2 - Bad</option>
+                    <option value="1" {% if habit.number_value == 1 %} selected {% endif %}>1 - Awful</option>
+                </select>
+                {% else %}
+                <input type="number" class="input" name="number_{{ habit.id }}" value="{{ habit.number_value }}">                     
+                {% endif %}
             {% else %}
-            <input type="number" class="input" name="number_{{ habit.id }}" value="{{ habit.number_value }}">                     
+                <input type="checkbox" class="input" name="checkbox_{{ habit.id }}" {% if habit.boolean_value %} checked {% endif %}>
             {% endif %}
-        {% else %}
-            <input type="checkbox" class="input" name="checkbox_{{ habit.id }}" {% if habit.boolean_value %} checked {% endif %}>
-        {% endif %}
-    </li>
-    {% endfor %}
-    </ul>
-    <input type="hidden" name="day" value="{{ days }}">
-    <input type="hidden" name="date" value="{{ date }}">
-    <input type="hidden" name="edit_form" value="True">
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token}}">
-    <input type="submit" class="button" value="Done">
-</form>
-<br>
-<a href="/day">Return</a>
+        </li>
+        {% endfor %}
+        </ul>
+        <input type="hidden" name="day" value="{{ days }}">
+        <input type="hidden" name="date" value="{{ date }}">
+        <input type="hidden" name="edit_form" value="True">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token}}">
+        <input type="submit" class="button" value="Done">
+    </form>
+    <br>
+    <a href="/day">Return</a>
+<div/>
 {% endblock %}
